type 3 pora spat
