# OrderApp/src/main/java/org/copyria/orderapp/controller/OrderController.java
@@ -5,12 +5,11 @@ import lombok.RequiredArgsConstructor;
 import org.copyria.orderapp.client.rest.controller.OrdersApi;
 import org.copyria.orderapp.client.rest.model.CreateOrderDto;
 import org.copyria.orderapp.client.rest.model.ResponseOrderDto;
+import org.copyria.orderapp.client.rest.model.ResponseOrderPremiumDto;
 import org.copyria.orderapp.client.rest.model.UpdateOrderDto;
 import org.copyria.orderapp.services.OrderService;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
@@ -19,21 +18,19 @@ import java.util.List;
 @RequiredArgsConstructor
 public class OrderController implements OrdersApi {
     private final OrderService orderService;
-    @RolesAllowed("MANAGER")
+    @RolesAllowed({"MANAGER","SELLER"})
     @Override
     public ResponseEntity<Void> deleteOrder(Long id) {
         orderService.deleteOrder(id);
         return ResponseEntity.noContent().build();
     }
-    @RolesAllowed("BUYER")
     @Override
-    public ResponseEntity<ResponseOrderDto> getOrder(Long id) {
-        return ResponseEntity.ok(orderService.getOrder(id));
+    public ResponseEntity<ResponseOrderPremiumDto> getOrder(Long id, String Curr) {
+        return ResponseEntity.ok(orderService.getOrder(id,Curr));
     }
-
     @Override
-    public ResponseEntity<List<ResponseOrderDto>> getOrders(String city, String region, Long minPrice, Long maxPrice) {
-        return ResponseEntity.ok(orderService.getOrders(city, region, minPrice, maxPrice));
+    public ResponseEntity<List<ResponseOrderDto>> getOrders(String city, String region, Double minPrice, Double maxPrice, String currency) {
+        return ResponseEntity.ok(orderService.getOrders(city, region, minPrice, maxPrice,currency));
     }
     @RolesAllowed("SELLER")
     @Override
